@startuml builder-with-director
/'
 * @file builder-with-director.puml
 * @brief Builder Pattern - Yönlendirici ile klasik yaklaşım
 * @author Muhammed Kayra Bulut
 * @date 15.10.2025
 * @version 1.0
 *
 * @description Bu diyagram Builder pattern'in Yönlendirici sınıfı ile
 *              klasik GoF uygulamasını gösterir. Yönlendirici
 *              farklı construction stratejilerini yönetir.
 '/

title Builder Pattern - Yönlendirici İle (Klasik Yaklaşım)

skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam shadowing false

skinparam class {
    BackgroundColor #E8F4F8
    BorderColor #2C5F7C
    ArrowColor #2C5F7C
}

' Product sınıfı
class Computer {
    +CPU: string
    +RAM: string
    +storage: string
    +GPU: string
    __
    +show(): void
}

' Abstract Builder
abstract class ComputerBuilder {
    #computer: unique_ptr<Computer>
    __
    +ComputerBuilder()
    +{abstract} buildCPU(): void
    +{abstract} buildRAM(): void
    +{abstract} buildStorage(): void
    +{abstract} buildGPU(): void
    +getComputer(): unique_ptr<Computer>
}

' Concrete Builders
class GamingComputerBuilder {
    +buildCPU(): void
    +buildRAM(): void
    +buildStorage(): void
    +buildGPU(): void
}

class OfficeComputerBuilder {
    +buildCPU(): void
    +buildRAM(): void
    +buildStorage(): void
    +buildGPU(): void
}

' Director sınıfı
class ComputerDirector {
    -builder: ComputerBuilder*
    __
    +setBuilder(builder: ComputerBuilder*): void
    +buildFullComputer(): unique_ptr<Computer>
    +buildMinimalComputer(): unique_ptr<Computer>
    +buildStorageOptimized(): unique_ptr<Computer>
}

' İlişkiler
ComputerBuilder ..> Computer : <<creates>>
ComputerBuilder <|-- GamingComputerBuilder
ComputerBuilder <|-- OfficeComputerBuilder
ComputerDirector o--> ComputerBuilder : uses

note right of ComputerDirector
  **Director farklı oluşturma**
  **yöntemlerini yönetir:**
  
  • buildFullComputer()
    → Tüm bileşenler
  
  • buildMinimalComputer()
    → Sadece CPU + RAM
  
  • buildStorageOptimized()
    → CPU + RAM + 2x Storage
end note

note bottom of ComputerDirector
  **Örnek Kullanım:**
  ComputerDirector director;
  GamingComputerBuilder builder;
  
  director.setBuilder(&builder);
  auto pc = director.buildFullComputer();
  pc->show();
end note

note "**Ne Zaman Kullanılır:**\n• Karmaşık oluşturma adımları\n• Farklı oluşturma vakaları\n• Oluşturma mantığını\n  yeniden kullanma\n\n**Zarar:**\n• Fazladan karmaşıklık\n• Çoğu durumda gereksiz" as N1

footer Oluşturulma: 15.10.2025 | Sürüm: 1.0.1 | Pattern: Builder (Classic GoF)

@enduml

